Edit start notebook

--- a/notebooks/Start here.ipynb
+++ b/notebooks/Start here.ipynb
@@ -20,8 +20,7 @@
    "source": [
     "## A first calculation\n",
     "\n",
-    "Sage can be used as a pocket calculator: you type in some expression to be calculated, Sage evaluates it, and prints the result; and repeat. This is called the *Read-Eval-Print-Loop*. In the Jupyter notebook, you type the expression in an **input cell**, or **code\n",
-    "cell**. This is the rectangle below this paragraph containing $ 1+1 $. Click on the cell to select it, and press shift-enter to evaluate it. You may instead click the Run button (right triangle) in the tool bar."
+    "Sage can be used as a pocket calculator: you type in some expression to be calculated, Sage evaluates it, and prints the result; and repeat. This is called the *Read-Eval-Print-Loop*. In the Jupyter notebook, you type the expression in an **input cell**, or **code cell**. This is the rectangle below this paragraph containing $1+1$. Click on the cell to select it, and press shift-enter to evaluate it. You may instead click the Run button (right triangle) in the toolbar."
    ]
   },
   {
@@ -37,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sage prints out its response in an **output cell** just below the input cell (that’s the $2$, so Sage confirms that $ 1+1=2 $). Click again in the cell, replace `1 + 1` by `2 + 2`, and evaluate it. Notice how much quicker it is now. That’s because a Sage process had to be started the first time, and then stayed ready.\n",
+    "Sage prints out its response in an **output cell** just below the input cell (that’s 2, so Sage confirms that 1 plus 1 is 2). Click again in the cell, replace $1+1$ by $2+2$, and evaluate it. Notice how much quicker it is now. That’s because a Sage process had to be started the first time, and then stayed ready.\n",
     "\n",
     "Congratulations, you have done your first calculations with Sage."
    ]
@@ -48,18 +47,18 @@
    "source": [
     "## Using the Jupyter notebook\n",
     "\n",
-    "Now take some time to explore the `Help` menu. You may find abundant information on Jupyter notebook. \n",
-    "For now we just review the basics. Use the plus button in the tool bar to create a new input cell below this paragraph (you may need to click this paragraph first to focus), then calculate any simple expression of your liking.\n",
+    "Now take some time to explore the <kbd>Help</kbd> menu. You find abundant information on Jupyter, Sage, and friends. \n",
+    "For now we just review the basics of Jupyter notebook. Use the plus button in the toolbar to create a new input cell below this paragraph (you may need to first click this paragraph to focus), then calculate any simple expression of your liking.\n",
     "\n",
-    "You can move around and edit any cell by clicking in it. Go back and change your $ 2+2 $ above to $ 3+3 $ and re-evaluate it.\n",
+    "You can move around and edit any cell by clicking in it. Go back and change your $2+2$ above to $3+3$ and evaluate it once again.\n",
     "\n",
-    "You can also edit any **text cell** by double clicking on it. Try it now! The text you see is using the [Markdown](https://jupyter-notebook.readthedocs.io/en/latest/examples/Notebook/Working%20With%20Markdown%20Cells.html) markup language. Do some changes to the text, and evaluate it again to rerender it. Markdown supports a fair amount of basic formatting, such as bold, underline, basic lists, and so forth. Thanks to the TeX rendering engine [MathJax](https://www.mathjax.org/), you may embed mathematical formulae such as $\\sin x - y^3$ just like with LaTeX. It can be fun to type in fairly complicated math, like this:\n",
+    "You can also edit any **text cell** by double clicking on it. Try it now! The text you see is using the [Markdown](https://jupyter-notebook.readthedocs.io/en/latest/examples/Notebook/Working%20With%20Markdown%20Cells.html) markup language. Do some changes to the text, and evaluate it again to rerender it. Markdown supports a fair amount of basic formatting, such as bold, underline, basic lists, and so forth. Thanks to the LaTeX rendering engine [MathJax](https://www.mathjax.org/), you may embed mathematical formulae such as $\\sin x - y^3$ just like with LaTeX. It can be fun to type in fairly complicated math, like this:\n",
     "\n",
     "$$\n",
     "    \\zeta(s)=\\sum_{n=1}^{\\infty}\\frac{1}{n^s}=\\prod_p \\left(\\frac{1}{1-p^{-s}}\\right)\n",
     "$$\n",
     "\n",
-    "If you *mess everything up*, you can use the menu `Kernel` > `Restart Kernel` to restart Sage. You can also use the menu `File` > `Save Notebook` to save notebook, and `File` > `Revert Notebook to Checkpoint` to reset to any previously saved version."
+    "If you *mess everything up*, you can use the menu <kbd>Kernel</kbd> > <kbd>Restart Kernel</kbd> to restart Sage. You can also use the menu <kbd>File</kbd> > <kbd>Save Notebook</kbd> to save notebook, and <kbd>File</kbd> > <kbd>Revert Notebook to Checkpoint</kbd> to reset to any previously saved version."
    ]
   },
   {
@@ -78,7 +77,7 @@
    "outputs": [],
    "source": [
     "@interact\n",
-    "def f(n=(1 .. 15), m=(1 .. 15)):\n",
+    "def f(n=(1..15), m=(1..15)):\n",
     "    print(\"n * m = {} = {}\".format(n * m, factor(n * m)))\n",
     "    P = polygon([(0, 0), (0, n), (m, n), (m, 0)])\n",
     "    P.show(aspect_ratio=1, gridlines='minor', figsize=[3, 3], xmax=14, ymax=14)"
@@ -105,7 +104,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This should output a rational number"
+    "This should output a rational number. If you know Python, notice the difference; Sage knows fractions!"
    ]
   },
   {
@@ -141,6 +140,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "factor(x^10 - 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%display plain\n",
     "factor(x^10 - 1)"
    ]
   },
@@ -566,9 +575,9 @@
     "\n",
     "We review the three main ways to get help in Sage:\n",
     "\n",
-    "- navigating through the documentation  \n",
-    "- tab-completion \n",
-    "- contextual help "
+    "- Navigating through the documentation  \n",
+    "- Tab-completion \n",
+    "- Contextual help "
    ]
   },
   {
@@ -577,7 +586,7 @@
    "source": [
     "### Navigating through the documentation\n",
     "\n",
-    "The `Help` menu gives access to the HTML documentation for Sage (and other pieces of software). This includes the Sage tutorial, the Sage thematic tutorials, and the Sage reference manual. \n",
+    "The <kbd>Help</kbd> menu gives access to the HTML documentation for Sage (and other pieces of software). This includes the Sage tutorial, the Sage thematic tutorials, and the Sage reference manual. \n",
     "\n",
     "This documentation is also available online from Sage’s web site\n",
     "[https://doc.sagemath.org](https://doc.sagemath.org/html/en/index.html) ."
@@ -590,7 +599,7 @@
     "### Completion and contextual documentation\n",
     "\n",
     "Start typing something and press the Tab key. The interface tries to complete it with a command name. If there is more than one completion, then they are all presented to you. Remember that Sage is case sensitive, i.e., it differentiates upper case from lower case. Hence the Tab completion of\n",
-    "`klein` won’t show you the `KleinFourGroup` command that builds the group $ \\ZZ/2 \\times \\ZZ/2 $ as a permutation group. Try pressing the `Tab` key in the following cells (with cursor at the end):"
+    "`klein` won’t show you the `KleinFourGroup` command that builds the group $ \\ZZ/2 \\times \\ZZ/2 $ as a permutation group. Try pressing the <kbd>Tab</kbd> key in the following cells (with cursor at the end):"
    ]
   },
   {
@@ -610,7 +619,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "KleinFourGroup"
+    "Klein"
    ]
   },
   {
@@ -660,7 +669,7 @@
    "source": [
     "### Digression: assignments and methods\n",
     "\n",
-    "In the above manipulations we did not store any data for later use. This can be done in Sage with the = symbol as in:"
+    "In the above manipulations we did not store any data for later use. This can be done in Sage with the assignment symbol as in:"
    ]
   },
   {
@@ -785,7 +794,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To know all methods of an object you can once more use `TAB`-completion. Write the name of the object followed by a dot and then press `TAB` key:"
+    "To know all methods of an object you can once more use <kbd>Tab</kbd>-completion. Write the name of the object followed by a dot and then press <kbd>TAB</kbd>:"
    ]
   },
   {
@@ -962,7 +971,7 @@
     "### Plotting\n",
     "\n",
     "The `plot()` command allows you to draw plots of functions. Recall\n",
-    "that you can access the documentation by pressing the Tab key\n",
+    "that you can access the documentation by pressing the <kbd>Tab</kbd> key\n",
     "after writing `plot?` in a cell:"
    ]
   },
@@ -1039,7 +1048,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Try putting the cursor right after `P.show(` and pressing `TAB` key to get a list of\n",
+    "Try putting the cursor right after `P.show(` and pressing <kbd>TAB</kbd> key to get a list of\n",
     "the options for how you can change the values of the given inputs."
    ]
   },
