--- a/notebooks/Start here.ipynb
+++ b/notebooks/Start here.ipynb
@@ -794,7 +794,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To know all methods of an object you can once more use <kbd>Tab</kbd>-completion. Write the name of the object followed by a dot and then press <kbd>TAB</kbd>:"
+    "To know all methods of an object you can once more use <kbd>Tab</kbd>-completion. Write the name of the object followed by a dot and then press <kbd>Tab</kbd>:"
    ]
   },
   {
@@ -1048,7 +1048,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Try putting the cursor right after `P.show(` and pressing <kbd>TAB</kbd> key to get a list of\n",
+    "Try putting the cursor right after `P.show(` and pressing <kbd>Tab</kbd> key to get a list of\n",
     "the options for how you can change the values of the given inputs."
    ]
   },
